fixed home page layout issue

--- a/public/style.css
+++ b/public/style.css
@@ -268,6 +268,9 @@
   a {
     text-decoration: none;
   }
+}
+
+#home-page-chat {
   #ask-form {
     padding: 2rem 0 0;
   }
